Fixed the font-size of the titles in about us, contcat and faq sections, fixed the button links to send you to calendary, fixed the z-index of header in mobile version, fixed home-1-section to work

--- a/src/components/views/AboutUs-Section/About.styles.css
+++ b/src/components/views/AboutUs-Section/About.styles.css
@@ -20,6 +20,7 @@
     color: #fff;
     margin-bottom: 0;
     border-bottom: 2px solid #fff;
+    font-size: 32px;
 }
 
 .about-info {
