--- a/src/components/views/Contacts-Section/Contacts.styles.css
+++ b/src/components/views/Contacts-Section/Contacts.styles.css
@@ -21,6 +21,7 @@
     color: #fff;
     margin-bottom: 0;
     border-bottom: 2px solid #fff;
+    font-size: 32px;
 }
 
 .contact-container {
