--- a/src/components/views/Header-Section/Header.style.css
+++ b/src/components/views/Header-Section/Header.style.css
@@ -118,12 +118,13 @@
     .navbar {
         display: none;
         position: absolute;
-        top: 80px;
+        top: 79px;
         left: 0;
         right: 0;
         background-color: rgb(0, 46, 93);
         flex-direction: column;
         align-items: center;
+        z-index: 4;
     }
 
     .navbar.mobile-menu-open {
