--- a/src/components/views/Home-Section/Home-1/Home1.styles.css
+++ b/src/components/views/Home-Section/Home-1/Home1.styles.css
@@ -4,15 +4,18 @@
     min-height: calc(100vh - 140px);
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    /* position: relative; */
     overflow: hidden;
-    /* gap: 2rem; */
-    /* padding: 0 1rem; */
 }
 
-.background {
+.home-1-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.home-1-container .background {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -38,14 +41,10 @@
     align-items: center;
     line-height: 30px;
     color: rgba(255, 255, 255, 0.9);
-    /* White text with 90% opacity */
     background-color: rgba(0, 46, 93, 0.9);
-    /* Black background with 80% opacity */
     padding: 24px;
     border-radius: 16px;
-    /* Optional: Adds rounded corners */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /* Optional: Adds a subtle shadow */
     font-size: 20px;
     width: 780px;
     margin: 0 auto;
