--- a/src/components/views/Q&A-Section/Questions.styles.css
+++ b/src/components/views/Q&A-Section/Questions.styles.css
@@ -17,40 +17,22 @@
 }
 
 .questions-info .questions-title {
+    text-align: center;
     color: #fff;
     margin-bottom: 0;
     border-bottom: 2px solid #fff;
-    font-size: 2rem;
+    font-size: 32px;
 }
 
-@media (max-width: 1200px) {
-    .questions-info .questions-title {
-        font-size: 1.8rem;
-    }
-}
-
-@media (max-width: 992px) {
-    .questions-info .questions-title {
-        font-size: 1.6rem;
-    }
-}
 
 @media (max-width: 768px) {
     #questions {
         padding: 10px;
-    }
-
-    .questions-info .questions-title {
-        font-size: 1.5rem;
     }
 }
 
 @media (max-width: 576px) {
     #questions {
         padding: 5px;
-    }
-
-    .questions-info .questions-title {
-        font-size: 1.3rem;
     }
 }
